--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,9 @@
     <title>Decode JWT</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <img src="./public/natural-disasters.jpg" alt="">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
