--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Decode JWT</title>
+    <title>SOS Connect</title>
   </head>
   <body>
-    <div id="root">
-      <img src="./public/natural-disasters.jpg" alt="">
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
