--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Gluten:wght@200&display=swap"
       rel="stylesheet"
     />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYxNnRcru3wDG2QFVoYVslVesnI01nejA" defer></script>
     <title>S.O.S Crisis</title>
   </head>
   <body>
